# xray-162

./: .gitignore  CMakeLists.txt  README.md  gen64.bat
code/engine/xrAPI/: CMakeLists.txt  stdafx.h  xrAPI.cpp  xrAPI.h
code/engine/xrCDB/: CMakeLists.txt  Frustum.cpp  Frustum.h  ISpatial.cpp  ISpatial.h  ISpatial_q_box.cpp  ISpatial_q_frustum.cpp  ISpatial_q_ray.cpp  ISpatial_verify.cpp  OPC_AABB.cpp  OPC_AABB.h  OPC_AABBCollider.cpp  OPC_AABBCollider.h  OPC_AABBTree.cpp  OPC_AABBTree.h  OPC_BVTCache.h  OPC_BoundingSphere.h  OPC_BoxBoxOverlap.h  OPC_Collider.cpp  OPC_Collider.h  OPC_Common.cpp  OPC_Common.h  OPC_Container.cpp  OPC_Container.h  OPC_FPU.h  OPC_Matrix3x3.cpp  OPC_Matrix3x3.h  OPC_Matrix4x4.cpp  OPC_Matrix4x4.h  OPC_MemoryMacros.h  OPC_Model.cpp  OPC_Model.h  OPC_OBB.cpp  OPC_OBB.h  OPC_OBBCollider.cpp  OPC_OBBCollider.h  OPC_OptimizedTree.cpp  OPC_OptimizedTree.h  OPC_Plane.cpp  OPC_Plane.h  (+47 more)
code/engine/xrCPU_Pipe/: CMakeLists.txt  PLC.cpp  StdAfx.h  resource.h  thread_pool.h  ttapi.cpp  ttapi.h  xrCPU_Pipe.cpp  xrCPU_Pipe.h  xrSkin2W.cpp  xrSkin2W_SSE.cpp  xrSkin2W_thread.cpp
code/engine/xrCore/: CMakeLists.txt  ChooseTypes.H  ELocatorAPI.cpp  ELocatorAPI.h  FS.cpp  FS.h  FS_impl.h  FS_internal.h  FTimer.cpp  FTimer.h  FileSystem.cpp  FileSystem.h  FixedMap.h  FixedSet.h  FixedVector.h  LocatorAPI.cpp  LocatorAPI.h  LocatorAPI_Notifications.h  LocatorAPI_auth.cpp  LocatorAPI_defs.cpp  LocatorAPI_defs.h  LzHuf.cpp  NET_utils.cpp  SubAlloc.hpp  Xr_ini.cpp  _bitwise.h  _color.h  _compressed_normal.cpp  _cylinder.h  _fbox.h  _fbox2.h  _flags.h  _math.cpp  _math.h  _matrix.h  _matrix33.h  _obb.h  _plane.h  _plane2.h  _quaternion.h  (+101 more)
code/engine/xrEngine/: CMakeLists.txt  CameraBase.cpp  CameraBase.h  CameraDebug.h  CameraDefs.h  CameraManager.cpp  CameraManager.h  CustomHUD.cpp  CustomHUD.h  Device_Initialize.cpp  Device_Misc.cpp  Device_create.cpp  Device_destroy.cpp  Device_overdraw.cpp  Device_wndproc.cpp  Effector.h  EffectorPP.cpp  EffectorPP.h  Engine.cpp  Engine.h  EngineAPI.cpp  EngineAPI.h  EnnumerateVertices.h  Envelope.cpp  Environment.cpp  Environment.cpp.bak  Environment.h  Environment_misc.cpp  Environment_render.cpp  EventAPI.cpp  EventAPI.h  FDemoPlay.cpp  FDemoPlay.h  FDemoRecord.cpp  FDemoRecord.h  Feel_Sound.h  Feel_Touch.cpp  Feel_Touch.h  Feel_Vision.cpp  Feel_Vision.h  (+184 more)
code/engine/xrNetServer/: CMakeLists.txt  NET_Client.cpp  NET_Client.h  NET_Common.cpp  NET_Common.h  NET_Compressor.cpp  NET_Compressor.h  NET_Log.cpp  NET_Log.h  NET_Messages.h  NET_PlayersMonitor.h  NET_Server.cpp  NET_Server.h  NET_Shared.h  ip_filter.cpp  stdafx.h
code/engine/xrParticles/: CMakeLists.txt  noise.cpp  particle_actions.h  particle_actions_collection.cpp  particle_actions_collection.h  particle_actions_collection_io.cpp  particle_core.cpp  particle_core.h  particle_effect.h  particle_manager.cpp  particle_manager.h  psystem.h  stdafx.h
code/engine/xrPhysics/: ActorCameraCollision.cpp  ActorCameraCollision.h  BlockAllocator.h  CMakeLists.txt  CalculateTriangle.h  CycleConstStorage.h  DamageSource.h  DisablingParams.cpp  DisablingParams.h  ElevatorState.cpp  ElevatorState.h  ExtendedGeom.cpp  ExtendedGeom.h  Geometry.cpp  Geometry.h  GeometryBits.cpp  GeometryBits.h  IActivationShape.cpp  IActivationShape.h  IColisiondamageInfo.h  IElevatorState.h  IPHCapture.h  IPHStaticGeomShell.h  IPHWorld.h  IPhysicsShellHolder.h  MathUtils.cpp  MathUtils.h  MathUtilsOde.h  MovementBoxDynamicActivate.cpp  MovementBoxDynamicActivate.h  PHAICharacter.cpp  PHAICharacter.h  PHActivationShape.cpp  PHActivationShape.h  PHActorCharacter.cpp  PHActorCharacter.h  PHBaseBodyEffector.h  PHCapture.cpp  PHCapture.h  PHCaptureInit.cpp  (+81 more)
code/engine/xrRenderPC_R1/: BlenderDefault.cpp  BlenderDefault.h  Blender_Blur.cpp  Blender_Blur.h  Blender_LaEmB.cpp  Blender_LaEmB.h  Blender_Model.cpp  Blender_Model.h  Blender_Screen_GRAY.cpp  Blender_Screen_GRAY.h  Blender_Shadow_World.cpp  Blender_Shadow_World.h  Blender_Vertex.cpp  Blender_Vertex.h  Blender_Vertex_aref.cpp  Blender_Vertex_aref.h  Blender_default_aref.cpp  Blender_default_aref.h  CMakeLists.txt  FStaticRender.cpp  FStaticRender.h  FStaticRender_Blenders.cpp  FStaticRender_DetectSector.cpp  FStaticRender_Loader.cpp  FStaticRender_RenderTarget.cpp  FStaticRender_RenderTarget.h  GlowManager.cpp  GlowManager.h  LightPPA.cpp  LightPPA.h  LightProjector.cpp  LightProjector.h  LightShadows.cpp  LightShadows.h  stdafx.h  xrRender_R1.cpp
code/engine/xrRenderPC_R2/: CMakeLists.txt  Light_Render_Direct_ComputeXFS.cpp  blender_bloom_build.cpp  blender_bloom_build.h  blender_combine.cpp  blender_combine.h  blender_deffer_aref.cpp  blender_deffer_flat.cpp  blender_deffer_model.cpp  blender_light_direct.cpp  blender_light_direct.h  blender_light_direct_cascade.cpp  blender_light_direct_cascade.h  blender_light_mask.cpp  blender_light_mask.h  blender_light_occq.cpp  blender_light_occq.h  blender_light_point.cpp  blender_light_point.h  blender_light_reflected.cpp  blender_light_reflected.h  blender_light_spot.cpp  blender_light_spot.h  blender_luminance.cpp  blender_ssao.cpp  blender_ssao.h  light_GI.cpp  light_smapvis.cpp  light_smapvis.h  light_vis.cpp  r2.cpp  r2.h  r2_R_calculate.cpp  r2_R_lights.cpp  r2_R_render.cpp  r2_R_sun.cpp  r2_blenders.cpp  r2_loader.cpp  r2_rendertarget.cpp  r2_rendertarget.h  (+25 more)
code/engine/xrRenderPC_R3/: CMakeLists.txt  Light_Render_Direct_ComputeXFS.cpp  SMAP_Allocator.h  blender_combine.h  blender_deffer_flat.cpp  blender_deffer_model.cpp  blender_deffer_model.h  blender_light_direct.cpp  blender_light_mask.cpp  blender_light_occq.cpp  blender_luminance.cpp  blender_luminance.h  blender_ssao.cpp  dx10MinMaxSMBlender.cpp  dx10MinMaxSMBlender.h  light_GI.cpp  light_smapvis.cpp  light_smapvis.h  light_vis.cpp  r2_R_sun.cpp  r2_sector_detect.cpp  r2_test_hw.cpp  r3.cpp  r3.h  r3_R_rain.cpp  r3_R_render.cpp  r3_R_sun_support.h  r3_loader.cpp  r3_rendertarget.cpp  r3_rendertarget.h  r3_rendertarget_accum_direct.cpp  r3_rendertarget_accum_omnipart_geom.cpp  r3_rendertarget_accum_point.cpp  r3_rendertarget_accum_spot.cpp  (+19 more)
(+4798 files in other folders)
